# yet-another-wordle

./: CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  cpplint.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/schemas/: db_1.sql
res/: rus_words.txt
src/: constants_storage.h  hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/app/: application.cpp  application.h  player.cpp  player.h  scenarios.cpp  scenarios.h
src/app/Players/: PlayersComponent.cpp  PlayersComponent.h  player.cpp  player.h  players.h  players_component.cpp  players_component.h
src/app/Players/Naive/: naive_players.cpp  naive_players.h
src/app/Scenarios/: check_word.cpp  check_word.h  scenarios.cpp  scenarios.h
src/app/Scenarios/CheckWord/: word_checker.cpp  word_checker.h
src/app/Scenarios/StartGame/: game_starter.cpp  game_starter.h
src/app/Sessions/: game_session.cpp  game_session.h
src/app/players/: player.h  players.h
src/app/players/game-session/: game_session.cpp  game_session.h
src/app/use-cases/: scenarios.h
src/app/use-cases/check-word/: word_checker.cpp  word_checker.h
src/app/use-cases/start-game/: game_starter.cpp  game_starter.h
src/application/: Player.cpp  Player.h  application.cpp  application.h
src/domain/: dictionary.h  game.cpp  game.h
src/handlers/CheckWord/: check_handler.cpp  check_handler.hpp
src/handlers/StartGame/: start_game_handler.cpp  start_game_handler.hpp
src/handlers/api/: check_handler.cpp  check_handler.hpp
src/handlers/auth/: start_game_handler.cpp  start_game_handler.hpp
src/infrasrtucture/: naive_dictionary.cpp  naive_dictionary.h
src/infrastructure/: dictionary_component.cpp  dictionary_component.h  naive_dictionary.cpp  naive_dictionary.h
src/infrastructure/dictionary/: dictionary_component.cpp  dictionary_component.h
src/infrastructure/dictionary/in-memory/: naive_dictionary.cpp  naive_dictionary.h
src/infrastructure/players/: players_component.cpp  players_component.h
src/infrastructure/players/in-memory/: memory_mapped_player.cpp  memory_mapped_player.h  memory_mapped_players.cpp  memory_mapped_players.h  naive_player.cpp  naive_player.h  naive_players.cpp  naive_players.h
src/model/: dictionary.h  game.cpp  game.h
tests/: conftest.py  game_tests.cpp  test_basic.py
tests/unit_tests/: app_test.cpp  eng_game_test.cpp  game_test.cpp  player_test.cpp  rus_game_test.cpp  test.cpp
